--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -704,6 +704,17 @@ es:
   custom_message_smooch_bot_window_closing_afp-checamos: ''
   custom_message_smooch_bot_disabled_afp-checamos: ''
   custom_message_smooch_bot_ask_for_tos_afp-checamos: ''
+  custom_message_smooch_bot_result_afp-fact-check: ''
+  custom_message_smooch_bot_result_changed_afp-fact-check: ''
+  custom_message_smooch_bot_ask_for_confirmation_afp-fact-check: ''
+  custom_message_smooch_bot_message_confirmed_afp-fact-check: ''
+  custom_message_smooch_bot_message_type_unsupported_afp-fact-check: ''
+  custom_message_smooch_bot_message_unconfirmed_afp-fact-check: ''
+  custom_message_smooch_bot_not_final_afp-fact-check: ''
+  custom_message_smooch_bot_meme_afp-fact-check: ''
+  custom_message_smooch_bot_window_closing_afp-fact-check: ''
+  custom_message_smooch_bot_disabled_afp-fact-check: ''
+  custom_message_smooch_bot_ask_for_tos_afp-fact-check: ''
   custom_message_smooch_bot_ask_for_confirmation_africa-check: ''
   custom_message_smooch_bot_message_confirmed_africa-check: ''
   custom_message_smooch_bot_message_unconfirmed_africa-check: ''
